# nmrsim

./: .gitignore  benchmark_hybrid.py  benchmark_npmrd.py  build_1h.py  build_2d.py  collapse_peaks.py  difficulty_report.csv  difficulty_report.py  fetch_npmrd.py  generate_problem.py  predict_shifts.py  pyproject.toml  score_answer.py  solve_structure.py  validate.py
data/: .gitignore  generate_problem_cache.json  npmrd_dbe_lt3_testset.json  npmrd_testset.json  npmrd_v2_testset.json  predict_shifts_cache.json
lsd_bin/: lsd  outlsd
memory/: MEMORY.md  lsd_notes.md
tests/: test_1h.py  test_2d.py  test_collapse.py  test_known_molecules.py  test_shifts.py  test_solver.py
