[project]
name = "nmrsim"
version = "0.1.0"
description = "NMR benchmark problem generator: SMILES → simulated 2D/1D NMR spectra"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "rdkit>=2023.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
nmrsim = "generate_problem:_cli"
nmrsim-score = "score_answer:_cli"
nmrsim-validate = "validate:_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
